--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 </head>
 <body>
-    {% include network-bar.html %}
+    <div class="page-layout">
+        {% include sidebar-nav.html %}
 
-    <main class="content-wrapper">
-        {{ content }}
-    </main>
+        <div class="page-content">
+            {% include network-bar.html %}
 
-    {% include footer.html %}
+            <main class="content-wrapper">
+                {{ content }}
+            </main>
+
+            {% include footer.html %}
+        </div>
+    </div>
 </body>
 </html>
